[gd_scene load_steps=29 format=3 uid="uid://bgipgn30b8erw"]

[ext_resource type="Script" path="res://scenes/Player_Test/playertest.gd" id="1_q3r7g"]
[ext_resource type="Texture2D" uid="uid://b6dgqy8rhrwhx" path="res://scenes/player/Player_jump.png" id="3_h5nsv"]
[ext_resource type="Texture2D" uid="uid://bkpj557f1wnhw" path="res://scenes/player/Lead_idle_animation.png" id="3_sbonw"]
[ext_resource type="Texture2D" uid="uid://dvvipqlyw4fgy" path="res://scenes/player/Lead_run_animation.png" id="4_7aeer"]
[ext_resource type="Texture2D" uid="uid://ccg8evjlwwv5q" path="res://scenes/player/Lead_run_transition.png" id="5_6ummp"]
[ext_resource type="Texture2D" uid="uid://ue2l7uqujmie" path="res://scenes/player/Player_into_roll_animation.png" id="6_if2q3"]
[ext_resource type="PackedScene" uid="uid://jlood4k8vocs" path="res://scenes/ui/game_ui.tscn" id="7_l1y7t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ribg"]
size = Vector2(12.8889, 29.3333)

[sub_resource type="Animation" id="Animation_ep1xm"]
resource_name = "Crouch"

[sub_resource type="Animation" id="Animation_52a5h"]
resource_name = "Death"

[sub_resource type="Animation" id="Animation_wqos2"]
resource_name = "Fall"

[sub_resource type="Animation" id="Animation_g1pgx"]
resource_name = "Idle"
length = 2.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_sbonw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 4, 5, 6, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_gyoor"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h5nsv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yykmm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_sbonw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f3n8q"]
resource_name = "Roll"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_if2q3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_e8udc"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7aeer")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0343146),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_3d82n"]
resource_name = "Stand"

[sub_resource type="Animation" id="Animation_i3t3u"]
resource_name = "Transition"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6ummp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0qap5"]
resource_name = "Unroll"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_if2q3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vob51"]
_data = {
"Crouch": SubResource("Animation_ep1xm"),
"Death": SubResource("Animation_52a5h"),
"Fall": SubResource("Animation_wqos2"),
"Idle": SubResource("Animation_g1pgx"),
"Jump": SubResource("Animation_gyoor"),
"RESET": SubResource("Animation_yykmm"),
"Roll": SubResource("Animation_f3n8q"),
"Running": SubResource("Animation_e8udc"),
"Stand": SubResource("Animation_3d82n"),
"Transition": SubResource("Animation_i3t3u"),
"Unroll": SubResource("Animation_0qap5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aklrv"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_undrx"]
input_0/name = "Idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Run"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "Roll"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "Death"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "Unroll"
input_4/auto_advance = false
input_4/reset = true
input_5/name = "Jump"
input_5/auto_advance = false
input_5/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ygjqs"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o3j1x"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nk0g2"]
animation = &"Roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twcnb"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5r7dd"]
animation = &"Unroll"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_86gix"]
graph_offset = Vector2(-359.487, 70.814)
nodes/Death/node = SubResource("AnimationNodeAnimation_aklrv")
nodes/Death/position = Vector2(-40, 240)
nodes/Ground_h/node = SubResource("AnimationNodeTransition_undrx")
nodes/Ground_h/position = Vector2(620, 140)
nodes/Idle/node = SubResource("AnimationNodeAnimation_ygjqs")
nodes/Idle/position = Vector2(0, 60)
nodes/Jump/node = SubResource("AnimationNodeAnimation_o3j1x")
nodes/Jump/position = Vector2(220, 360)
nodes/Roll/node = SubResource("AnimationNodeAnimation_nk0g2")
nodes/Roll/position = Vector2(280, 220)
nodes/Run/node = SubResource("AnimationNodeAnimation_twcnb")
nodes/Run/position = Vector2(140, 140)
nodes/Unroll/node = SubResource("AnimationNodeAnimation_5r7dd")
nodes/Unroll/position = Vector2(80, 300)
nodes/output/position = Vector2(1020, 40)
node_connections = [&"Ground_h", 0, &"Idle", &"Ground_h", 1, &"Run", &"Ground_h", 2, &"Roll", &"Ground_h", 3, &"Death", &"Ground_h", 4, &"Unroll", &"Ground_h", 5, &"Jump", &"output", 0, &"Ground_h"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(3, 3)
collision_mask = 6
script = ExtResource("1_q3r7g")

[node name="Player_Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_sbonw")
hframes = 4
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "Player_Sprite/Player_Animation",
"slice": "",
"source": "E:/Art/aseprite/last_of_the_lead_art/Lead_run_transition.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "6f49399fb948df4f2b804a407e26bd3d"
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.99999)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_2ribg")

[node name="Player_Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player_Sprite")
libraries = {
"": SubResource("AnimationLibrary_vob51")
}

[node name="Player_Animation_Tree" type="AnimationTree" parent="."]
root_node = NodePath("../Player_Sprite")
tree_root = SubResource("AnimationNodeBlendTree_86gix")
anim_player = NodePath("../Player_Animation")
parameters/Ground_h/current_state = "Death"
parameters/Ground_h/transition_request = ""
parameters/Ground_h/current_index = 3

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MarkerWeaponRight" type="Marker2D" parent="."]
position = Vector2(10, -1)

[node name="MarkerWeaponLeft" type="Marker2D" parent="."]
position = Vector2(-10, -1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("7_l1y7t")]

[node name="Node2D" type="Node2D" parent="."]

[node name="MarkerHead" type="Marker2D" parent="Node2D"]
position = Vector2(8, -15)

[node name="MarkerHead2" type="Marker2D" parent="Node2D"]
position = Vector2(-8, -15)

[node name="MarkerFeet" type="Marker2D" parent="Node2D"]
position = Vector2(8, 15)

[node name="MarkerFeet2" type="Marker2D" parent="Node2D"]
position = Vector2(-8, 15)

[connection signal="animation_finished" from="Player_Animation_Tree" to="." method="_on_player_animation_tree_animation_finished"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
